--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         canvas: (function() { return document.getElementById('canvas'); })()
     };
   </script>
-  <script src="index.js"></script>
+  <script src="game_client.js"></script>
 </body>
 </html>
