--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
     #canvas {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      margin: 0px;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
+      width: 100vw;
+      height: 100vh;
       display: block;
     }
   </style>
