--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!docTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -13,11 +13,19 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      display: block;
+      display: none;
     }
   </style>
 </head>
 <body>
+  <script type='text/javascript'>
+    function on_file_selected(event) {
+      globalThis["open_file"](event)
+      document.getElementById('input').style.display = "none";
+      document.getElementById('canvas').style.display = "block";
+    }
+  </script>
+  <input id="input" type="file" onchange="on_file_selected(event)"></input>
   <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
   <script type='text/javascript'>
     var Module = {
